Fix vertical alignment of dropdown nav items
Add inline-flex and align-items to .nav__dropdown

--- a/wp-content/themes/blue-raeven-theme/assets/css/theme.css
+++ b/wp-content/themes/blue-raeven-theme/assets/css/theme.css
@@ -322,6 +322,8 @@ ul { list-style: none; }
 /* Dropdown menus */
 .nav__dropdown {
   position: relative;
+  display: inline-flex;
+  align-items: center;
 }
 .nav__dropdown-trigger {
   cursor: pointer;
